# neural_network

./: Cargo.toml  Readme.md
adder/: Cargo.toml
adder/src/: main.rs
neural_network/: Cargo.toml
neural_network/src/: lib.rs
rusty_neurons/: Cargo.toml  Readme.md
rusty_neurons/src/: lib.rs  utils.rs
